# hw_smarthome_backend

./: .env  .env.test  Cargo.toml  Dockerfile  README.txt  docker-compose.yml  rest-api.http
migrations/2025-01-30-191148_create_homes/: down.sql  up.sql
migrations/2025-01-30-194038_create_rooms/: up.sql
migrations/2025-01-30-194310_create_devices/: up.sql
migrations/2025-01-30-194513_create_reports/: up.sql
src/: lib.rs  main.rs
src/adapters/api/: mod.rs
src/adapters/api/device/: device_controller.rs  device_mapper.rs  device_payload.rs  device_presenter.rs  mod.rs
src/adapters/api/home/: home_controller.rs  home_mapper.rs  home_payload.rs  home_presenter.rs  mod.rs
src/application/mappers/: api_mapper.rs  http_mapper.rs
src/application/repositories/: device_repo_abstract.rs  home_repo_abstract.rs  mod.rs  report_repo_abstract.rs  room_repo_abstract.rs
src/application/usecases/: add_device_to_room.rs  add_home.rs  add_report.rs  add_room_to_home.rs  del_device.rs  del_home.rs  del_room.rs  get_home_list.rs  get_report_list.rs  get_room_device_list.rs  get_room_list.rs  mod.rs
src/application/utils/: error_handling.rs
src/domain/: device_entity.rs  error.rs  home_entity.rs  info_provider_entity.rs  mod.rs  report_entity.rs  room_entity.rs
src/infra/: mod.rs
tests/: mod.rs
tests/integration/: mod.rs  notes.txt  test_devices.rs  test_homes.rs  test_reports.rs  test_rooms.rs
tests/integration/fixtures/: device.json  fixtures_run.rs  fixtures_struct.rs  home.json  room.json
tests/utils/: test_context.rs  utils_setup.rs
(+38 files in other folders)
