[package]
name = "smarthome_api"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "smarthome_api"
path = "src/main.rs"

[lib]
name = "smarthome_api"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.9.0", features = ["openssl"]  }
actix-rt = "~2.7"
actix-http = "3.9.0"
log = "~0.4.0"
env_logger = "~0.9"
failure = "~0.1"
serde = "~1.0"
serde_json = "~1.0"
async-trait = "~0.1"
diesel = { version = "2.2.6", features = ["serde_json", "postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenv = "~0.15"
r2d2 = "~0.8"
tokio = { version = "1.40", features = ["full"] }
thiserror = "~1.0"
derive_more = "~0.99"
reqwest={version="0.11", features = ["json"]}
uuid = { version = "~1.0", features = ["serde", "v4"] }
chrono = { version =  "0.4.39", features = ["serde"] }